--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
   import { getDatabase,set, ref, update } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-database.js";
-  import { getAuth,signInWithEmailAndPassword, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
+  import { getAuth,signInWithEmailAndPassword, createUserWithEmailAndPassword,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -117,6 +117,35 @@ createacctbtn.addEventListener('click',(e)=>
     // ..
   });
 });
+
+const user = auth.currentUser;
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+    // User is signed in, see docs for a list of available properties
+    // https://firebase.google.com/docs/reference/js/auth.user
+    const uid = user.uid;
+    // ...
+  } else {
+    // User is signed out
+    // ...
+  }
+});
+logout.addEventListener('click',(e)=>
+{
+  auth.signOut().then(() => {
+    // Sign-out successful.
+    alert('Logged Out');
+  }).catch((error) => {
+    // An error happened.
+    alert(error);
+  });
+});
+returnbtn.addEventListener('click',(e)=>
+{
+  document.getElementById("main").style.display = "block";
+  document.getElementById("create-acct").style.display = "none";
+});
+
 </script>
 
 
