--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
   import { getDatabase,set, ref, update } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-database.js";
-  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
+  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -132,13 +132,23 @@ createacctbtn.addEventListener('click',(e)=>
     const user = userCredential.user;
 
     // Send email verification
-    user.sendEmailVerification()
-        .then(() => {
-          console.log('Verification email sent.');
-        })
-        .catch((error) => {
-          console.error('Error sending verification email:', error);
-        });
+    // Send email verification
+    sendEmailVerification(auth.currentUser)
+      .then(() => {
+        console.log('Verification email sent.');
+      })
+      .catch((error) => {
+        console.error('Error sending verification email:', error);
+      });
+
+    // add user to database
+    set(ref(database, 'users/' + user.uid), {
+      email: emailsignup,
+      password: passwordsignup
+    });
+
+    alert('Signed up');
+    // ...
 
     // add user to database
 
