--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <form action="#">
               <h1>Create an Account</h1>
               <input id="emailsignup" type="text" placeholder="Email *"></input>
-              <input id="confirmemailsignup" type="email" placeholder="Confirm Email *"></input>
+              <input id="confirmemailsignup" type="email" placeholder="Re-enter Email *"></input>
               <input id="passwordsignup" type="password" placeholder="Password *"></input>
-              <input id="confirmpasswordsignup" type="password" placeholder="Confirm Password *"></input>
+              <input id="confirmpasswordsignup" type="password" placeholder="Re-enter Password *"></input>
               <button id="createacctbtn">Create Account</button>
           </form>
       </div>
