--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@ const user = auth.currentUser;
 if (user){
   // User is signed in
   // ...
-  window.location.href = "home.php";
+  window.location.href = "logged.html";
 } else {
-  // No user is signed in
-  // ...
+
+  window.location.href = "index.html";
 }
 
 onAuthStateChanged(auth, (user) => {
