--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@ if (user){
   // ...
   window.location.href = "logged.html";
 } else {
-
-  window.location.href = "index.html";
+  // No user is signed in
+  // ...
 }
 
 onAuthStateChanged(auth, (user) => {
