--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ const user = auth.currentUser;
 if (user){
   // User is signed in
   // ...
-  window.location.href = "logged.html";
+  window.location.href = "home.php";
 } else {
   // No user is signed in
   // ...
@@ -198,9 +198,8 @@ if (user){
 
 onAuthStateChanged(auth, (user) => {
   if (user) {
-    // User is signed in, see docs for a list of available properties
-    // https://firebase.google.com/docs/reference/js/auth.user
-    const uid = user.uid;
+
+    window.location.href = "logged.html";
     // ...
   } else {
     // User is signed out
