--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ if (user){
 onAuthStateChanged(auth, (user) => {
   if (user) {
 
-    window.location.href = "logged.html";
+    window.location.href = "assets/logged.html";
     // ...
   } else {
     // User is signed out
