--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="overlay-panel overlay-right">
                   <h1>Hello, Spartan!</h1>
                   <p>Enter your personal details and start the journey with us</p>
-                  <button class="ghost" id="signUpAni">Sign Up</button>
+                  <button class="ghost" id="signUpAni" onclick="javascript: $zoho.salesiq.reset();">Sign Up</button>
               </div>
           </div>
       </div>
