--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
 
   </div>
-
+<script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siq1f6a21517805e703373ecf4589939a06f61ea18f9c1dd4f7d0c6efdb43f88261", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 </body>
 
 <script type="module" src="assets/js/main.js"></script>
