--- a/OSD.html
+++ b/OSD.html
@@ -84,7 +84,7 @@
 
     <div class="container-ticket">
         <div class="pdf-conatiner">
-            <embed class="pdf-embed" src="../support/copies/OSD.pdf" type="application/pdf">
+            <embed class="pdf-embed" src="copies/OSD.pdf" type="application/pdf">
         </div>
 
     </div>
