--- a/support.html
+++ b/support.html
@@ -46,6 +46,10 @@
                     <li class="nav-item ms-auto">
                         <a class="nav-link" aria-current="page" href="#">Contact</a>
                     </li>
+                    <li class="nav-item ms-auto">
+                        <a class="nav-link" aria-current="page" href="index.html">Logout</a>
+                    </li>
+                    
                 </ul>
 
             </div>
@@ -289,8 +293,7 @@
     const getElementVal = (id) => {
         return document.getElementById(id).value;
     };
-    // Alert to indicate that the script has been executed
-    alert('JavaScript executed successfully!');
+   
 </script>
 
 </html>
