--- a/content2 .html
+++ b/content2 .html
@@ -49,6 +49,9 @@
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="support.html">Contact</a>
                     </li>
+                       <li class="nav-item ms-auto">
+                        <a class="nav-link" href="index.html">Logout</a>
+                    </li>
                 </ul>
 
             </div>
