--- a/support.html
+++ b/support.html
@@ -57,19 +57,23 @@
     </nav>
 
 
+    
     <div class="container-fluid">
         <div class="row">
             <div class="col col-design">
-                <h2>CS Tavern Help Center</h2>
+                <h2><span class="white-lttrs">CS</span><span class="hghlght-lttrs">TAVERN</span> Help Center</h2>
             </div>
             <div class="col col-design2">
-                <h4>Learn how to use CS Tavern and find answers to common questions</h4>
+                <h4>Learn how to use CS Tavern and find answers to common questions
+                </h4>
             </div>
         </div>
     </div>
 
 
-    <h2 class="consult-support">Frequently Asked Questions</h2>
+    <h2 class="consult-support"><span class="brwn-lttrs">F</span>requently <span class="brwn-lttrs">A</span>sked <span
+            class="brwn-lttrs">Q</span>uestions</h2>
+
 
 
     <div class="container-card">
@@ -123,7 +127,7 @@
     </div>
 
 
-    <h2 class="consult-support">Consult / Support</h2>
+    <h2 class="consult-support"><span class="brwn-lttrs">C</span>onsult / <span class="brwn-lttrs">S</span>upport</h2>
 
     <div class="container-ticket">
 
