--- a/OSD.html
+++ b/OSD.html
@@ -83,7 +83,8 @@
         </div>
     </div>
 
-    <h2 class="consult-support">Student Discipline Manual</h2>
+     <h2 class="consult-support"><span class="brwn-lttrs">S</span>tudent <span class="brwn-lttrs">D</span>iscipline <span
+            class="brwn-lttrs">M</span>anual</h2>
 
     <div class="container-ticket">
         <div class="pdf-conatiner">
