--- a/support.html
+++ b/support.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <!-- <div id="preloader"></div> -->
+    <div id="preloader"></div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="homePage.html"><img src="image/logo4.png" width="200" height="50"></a>
