--- a/homePage.html
+++ b/homePage.html
@@ -44,9 +44,6 @@
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="support.html">Contact</a>
                     </li>
-                       <li class="nav-item ms-auto">
-                        <a class="nav-link" href="index.html">Logout</a>
-                    </li>
                 </ul>
 
             </div>
@@ -54,13 +51,13 @@
     </nav>
 
 
-    <div class="cover-container d-flex w-100 h-100 p-5 mx-auto flex-column">
+    <div class="cover-container d-flex w-100 h-100 p-4 mx-auto flex-column">
         <header class="mb-auto">
             <div class="row">
                 <div class="container-fluid col-md-6">
                     <div class="text-container">
                         <div class="left-text">
-                            <h2 class="cursive-header"><span id="cs">CS</span> TAVERN</h2>
+                            <h2 class="cursive-header" style="font-size: 5.6rem;"><span id="cs">CS</span> TAVERN</h2>
                             <p class="lead">Amplify Your Voice: Join Our Platform for Open Dialogues on School Matters –
                                 Express Your Concerns, Share Insights, and Shape Your Educational Experience. <span
                                     id="highlight">Your
