--- a/OSD.html
+++ b/OSD.html
@@ -15,33 +15,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-        <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-        <script src="./scripts/scrollup.js"></script>
-        <script src="./scripts/preLoader.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="./scripts/scrollup.js"></script>
+    <script src="./scripts/preLoader.js"></script>
 
     <title>OSD</title>
 </head>
 
-
 <style>
     .pdf-container {
-        width: 50%;
-        /* Adjust the width as needed */
+        width: 100%;
+        max-width: 100%;
         margin: 0 auto;
-        /* Center the container */
-        background: #000;
-
     }
 
     .pdf-embed {
         width: 100%;
-        /* Make the PDF fill the container width */
-        height: 700px;
-        /* Adjust the height as needed */
+        height: 60vh; /* Adjust the height as needed */
         margin-left: 10px;
     }
+
+    #pdf {
+        width: 100%;
+        height: 700px;
+    }
+
+    @media (max-width: 950px) {
+        .pdf-container {
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 820px) {
+        .pdf-container {
+            width: 100%;
+        }
+    }
 </style>
+
 
 
 <body>
@@ -60,16 +72,13 @@
                         <a class="nav-link" href="homePage.html">Home</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link"aria-current="page" href="#">Rules</a>
+                        <a class="nav-link" aria-current="page" href="#">Rules</a>
                     </li>
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="counsel.html">Counsel</a>
                     </li>
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="support.html">Contact</a>
-                    </li>
-                      <li class="nav-item ms-auto">
-                        <a class="nav-link" href="index.html">Logout</a>
                     </li>
                 </ul>
 
@@ -83,12 +92,12 @@
         </div>
     </div>
 
-     <h2 class="consult-support"><span class="brwn-lttrs">S</span>tudent <span class="brwn-lttrs">D</span>iscipline <span
+    <h2 class="consult-support"><span class="brwn-lttrs">S</span>tudent <span class="brwn-lttrs">D</span>iscipline <span
             class="brwn-lttrs">M</span>anual</h2>
 
     <div class="container-ticket">
-        <div class="pdf-conatiner">
-            <embed class="pdf-embed" src="copies/OSD.pdf" type="application/pdf">
+        <div class="pdf-container">
+            <iframe id="pdf" src="./copies/OSD.pdf" frameborder="0"></iframe>
         </div>
 
     </div>
