--- a/OSD.html
+++ b/OSD.html
@@ -80,6 +80,9 @@
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="support.html">Contact</a>
                     </li>
+                      <li class="nav-item ms-auto">
+                        <a class="nav-link" href="index.html">Logout</a>
+                    </li>
                 </ul>
 
             </div>
