--- a/homePage.html
+++ b/homePage.html
@@ -124,13 +124,13 @@
                     <div class="card-container">
                         <div class="card " style="height: 350px;">
                             <span class="card-icon"><img src="./image/edit.png" alt="guide and tips"></span>
-                            <p class="h4 pt-4">Guide and Tips</p>
+                            <p class="h4 pt-4">Counsel</p>
                             <p class="p1 text-muted">
                                 Unlock valuable insights and practical tips on our guides page for
                                 effortless
                                 optimization.
                             </p>
-                            <a href="#" class="bottom-icon" type="button"><img src="./image/arrow-small-left.png"
+                            <a href="counsel.html" class="bottom-icon" type="button"><img src="./image/arrow-small-left.png"
                                     alt="button" class="right-btn"></a>
                         </div>
                     </div>
