--- a/support.html
+++ b/support.html
@@ -154,7 +154,6 @@
                 <div class="topic-text">Submit a Ticket</div>
                 <p>You can reach us by filling out this form below</p>
                 <form action="" id="contactForm">
-                    <div class="alert">Your message sent</div>
 
                     <div class="input-box">
                         <input type="text" id="name" placeholder="Your name...." />
@@ -169,7 +168,7 @@
                     </div>
 
                     <div class="button">
-                        <input type="submit" value="Send Now">
+                        <input type="submit" value="Send Now" onclick="alert('Your message has been sent!')" />
                     </div>
                 </form>
             </div>
@@ -222,11 +221,11 @@
                     </li>
                     <li>
                         <span><i class="fa-solid fa-envelope"></i> </span>
-                        <p><a href="">cstavern@@gmail.com</a></p>
+                        <p><a href="">cstavern@gmail.com</a></p>
                     </li>
                     <li>
                         <span><i class="fa-solid fa-message"></i> </span>
-                        <p><a href="">Submit a ticket</a></p>
+                        <p><a href="support.html">Submit a ticket</a></p>
                     </li>
                 </ul>
             </div>
