--- a/homePage.html
+++ b/homePage.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./image/headerlogo1.ico">
     <link rel="stylesheet" href="./css/homePage.css">
     <link rel="stylesheet" href="./css/navFooter.css">
     <link rel="stylesheet" href="./css/landingPageStyle.css">
@@ -45,7 +46,7 @@
                         <a class="nav-link" href="support.html">Contact</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link" href="index.html">Logout</a>
+                        <a class="nav-link" href="login.html">Logout</a>
                     </li>
                 </ul>
 
@@ -60,7 +61,7 @@
                 <div class="container-fluid col-md-6">
                     <div class="text-container">
                         <div class="left-text">
-                            <h2 class="cursive-header" style="font-size: 5.6rem;"><span id="cs">CS</span> TAVERN</h2>
+                            <h2 class="cursive-header"><span id="cs">CS</span> TAVERN</h2>
                             <p class="lead">Amplify Your Voice: Join Our Platform for Open Dialogues on School Matters –
                                 Express Your Concerns, Share Insights, and Shape Your Educational Experience. <span
                                     id="highlight">Your
@@ -197,7 +198,9 @@
 
 
 
-<script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siqea8fcf88ccabbccfc129db34185544921734ba4a289fcf5aed5cdc38fe1019d6", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siqea8fcf88ccabbccfc129db34185544921734ba4a289fcf5aed5cdc38fe1019d6", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
