--- a/counsel.html
+++ b/counsel.html
@@ -21,7 +21,8 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./scripts/scrollup.js"></script>
     <script src="./scripts/preLoader.js"></script>
-    <title>Guides and Tips</title>
+    <title>Counsel</title>
+    <link rel="icon" type="image/x-icon" href="./image/headerlogo1.ico">
 </head>
 
 
@@ -50,8 +51,8 @@
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="support.html">Contact</a>
                     </li>
-                       <li class="nav-item ms-auto">
-                        <a class="nav-link" href="index.html">Logout</a>
+                    <li class="nav-item ms-auto">
+                        <a class="nav-link" href="login.html">Logout</a>
                     </li>
                 </ul>
 
@@ -66,7 +67,7 @@
             <div class="row align-items-start">
 
                 <div class="col">
-                    <div class="card">
+                    <div class="card mb-4">
                         <img src="./image/abuseicon.jpg" class="card-img-top">
                         <div class="card-shdw">
                             <div class="card-body">
@@ -83,7 +84,7 @@
                 </div>
 
                 <div class="col">
-                    <div class="card">
+                    <div class="card mb-4 h-100">
                         <img src="./image/wtd.jpg" class="card-img-top">
                         <div class="card-shdw">
                             <div class="card-body">
@@ -100,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card mb-4 h-100">
                         <img src="./image/OIP.jpg" class="card-img-top">
                         <div class="card-shdw">
                             <div class="card-body">
@@ -118,7 +119,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card mb-4 h-100">
                         <img src="./image/socialanxiety.jpg" class="card-img-top">
                         <div class="card-shdw">
                             <div class="card-body">
