--- a/support.html
+++ b/support.html
@@ -168,8 +168,15 @@
                     </div>
 
                     <div class="button">
-                        <input type="submit" value="Send Now" onclick="alert('Your message has been sent!')" />
+                        <input type="submit" value="Send Now" onclick="onlick()" />        
                     </div>
+                    <div id="message1"></div>
+                    <script>
+            function onlick(event) {
+    event.preventDefault();
+    document.getElementById('message').innerText = "Your message sent";
+}
+        </script>
                 </form>
             </div>
         </div>
