--- a/support.html
+++ b/support.html
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="button">
-                        <input type="submit" value="Send Now">
+                        <input type="submit" value="Send Now" onclick="alert('Your message has been sent!')" />
                     </div>
                 </form>
             </div>
